// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Status /> interactions should hide check if check.value is zero 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#1AAA55",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_TIME"
                    aria-valuemax={10800}
                    aria-valuemin={0}
                    aria-valuenow={0}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#1AAA55",
                        "width": "0%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF03TIME_HOUR_ABBR
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING3TIME_HOUR_ABBR
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#1AAA55",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_TIME"
                    id="Max-Daily-Session"
                    maxValue={10800}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#1AAA55",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={0}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        3TIME_HOUR_ABBR
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-seconds"
                >
                  USAGE_USED_OF03TIME_HOUR_ABBR
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="WiFi Login Successful!"
          >
            WiFi Login Successful!
          </p>
          <p
            className="status-content"
            key="        You can now use the internet."
          >
                    You can now use the internet.
          </p>
          <p
            className="status-content"
            key="        You may leave this page open in case you want to log out."
          >
                    You may leave this page open in case you want to log out.
          </p>
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions should not display STATUS_CONTENT and radius usage when logged in internetMode 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/{orgSlug}/change-password/"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions should show user's radius usage 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#1AAA55",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_TIME"
                    aria-valuemax={10800}
                    aria-valuemin={0}
                    aria-valuenow={0}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#1AAA55",
                        "width": "0%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF03TIME_HOUR_ABBR
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING3TIME_HOUR_ABBR
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#1AAA55",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_TIME"
                    id="Max-Daily-Session"
                    maxValue={10800}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#1AAA55",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={0}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        3TIME_HOUR_ABBR
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-seconds"
                >
                  USAGE_USED_OF03TIME_HOUR_ABBR
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#1AAA55",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_DATA"
                    aria-valuemax={3000000000}
                    aria-valuemin={0}
                    aria-valuenow={0}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#1AAA55",
                        "width": "0%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF03 GB
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING3 GB
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#1AAA55",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_DATA"
                    id="Max-Daily-Session-Traffic"
                    maxValue={3000000000}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#1AAA55",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={0}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        3 GB
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-bytes"
                >
                  USAGE_USED_OF03 GB
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="WiFi Login Successful!"
          >
            WiFi Login Successful!
          </p>
          <p
            className="status-content"
            key="        You can now use the internet."
          >
                    You can now use the internet.
          </p>
          <p
            className="status-content"
            key="        You may leave this page open in case you want to log out."
          >
                    You may leave this page open in case you want to log out.
          </p>
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should hide checks and show upgrade option if all checks have zero value 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT Premium
      </h3>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        />
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p
        className="usage-upgrade"
      >
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is exhausted 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT Premium
      </h3>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_TIME"
                    aria-valuemax={10800}
                    aria-valuemin={0}
                    aria-valuenow={10700}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "99.07407407407408%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING1TIME_MINUTE_ABBR
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_TIME"
                    id="Max-Daily-Session"
                    maxValue={10800}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={10700}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        1TIME_MINUTE_ABBR
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-seconds"
                >
                  USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_DATA"
                    aria-valuemax={3000000000}
                    aria-valuemin={0}
                    aria-valuenow={3000000000}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "100%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF3 GB3 GB
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING0
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_DATA"
                    id="Max-Daily-Session-Traffic"
                    maxValue={3000000000}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={3000000000}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        0
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-bytes"
                >
                  USAGE_USED_OF3 GB3 GB
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p
        className="usage-upgrade"
      >
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is exhausted 2`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <InfoModal
      active={true}
      content={
        <div
          className="plans "
        >
          <p
            className="intro"
          >
            Please select the preferred subscription plan
            .
          </p>
          <div
            className="plan"
          >
            <input
              id="radio0"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="0"
              type="radio"
              value="0"
            />
            <label
              htmlFor="radio0"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €1.99 per month
              </span>
            </label>
          </div>
          <div
            className="plan"
          >
            <input
              id="radio1"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="1"
              type="radio"
              value="1"
            />
            <label
              htmlFor="radio1"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €9.99 per year
              </span>
            </label>
          </div>
        </div>
      }
      handleResponse={[Function]}
      id="upgrade-plan-modal"
      isConfirmationDialog={false}
      isScrollable={true}
      toggleModal={[Function]}
    />
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT Premium
      </h3>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_TIME"
                    aria-valuemax={10800}
                    aria-valuemin={0}
                    aria-valuenow={10700}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "99.07407407407408%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING1TIME_MINUTE_ABBR
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_TIME"
                    id="Max-Daily-Session"
                    maxValue={10800}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={10700}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        1TIME_MINUTE_ABBR
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-seconds"
                >
                  USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_DATA"
                    aria-valuemax={3000000000}
                    aria-valuemin={0}
                    aria-valuenow={3000000000}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "100%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF3 GB3 GB
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING0
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_DATA"
                    id="Max-Daily-Session-Traffic"
                    maxValue={3000000000}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={3000000000}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        0
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-bytes"
                >
                  USAGE_USED_OF3 GB3 GB
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p
        className="usage-upgrade"
      >
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is free 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT Free
      </h3>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_TIME"
                    aria-valuemax={10800}
                    aria-valuemin={0}
                    aria-valuenow={10700}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "99.07407407407408%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING1TIME_MINUTE_ABBR
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_TIME"
                    id="Max-Daily-Session"
                    maxValue={10800}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={10700}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        1TIME_MINUTE_ABBR
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-seconds"
                >
                  USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_DATA"
                    aria-valuemax={3000000000}
                    aria-valuemin={0}
                    aria-valuenow={3000000000}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "100%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF3 GB3 GB
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING0
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_DATA"
                    id="Max-Daily-Session-Traffic"
                    maxValue={3000000000}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={3000000000}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        0
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-bytes"
                >
                  USAGE_USED_OF3 GB3 GB
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p
        className="usage-upgrade"
      >
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is free 2`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <InfoModal
      active={true}
      content={
        <div
          className="plans "
        >
          <p
            className="intro"
          >
            Please select the preferred subscription plan
            .
          </p>
          <div
            className="plan"
          >
            <input
              id="radio0"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="0"
              type="radio"
              value="0"
            />
            <label
              htmlFor="radio0"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €1.99 per month
              </span>
            </label>
          </div>
          <div
            className="plan"
          >
            <input
              id="radio1"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="1"
              type="radio"
              value="1"
            />
            <label
              htmlFor="radio1"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €9.99 per year
              </span>
            </label>
          </div>
        </div>
      }
      handleResponse={[Function]}
      id="upgrade-plan-modal"
      isConfirmationDialog={false}
      isScrollable={true}
      toggleModal={[Function]}
    />
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT Free
      </h3>
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_TIME"
                    aria-valuemax={10800}
                    aria-valuemin={0}
                    aria-valuenow={10700}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "99.07407407407408%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING1TIME_MINUTE_ABBR
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon timer-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_TIME"
                    id="Max-Daily-Session"
                    maxValue={10800}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={10700}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        1TIME_MINUTE_ABBR
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-seconds"
                >
                  USAGE_USED_OF2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR3TIME_HOUR_ABBR
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-big"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper-big"
              >
                <div
                  className="usage-progress-bar-container"
                >
                  <div
                    aria-label="USAGE_DATA"
                    aria-valuemax={3000000000}
                    aria-valuemin={0}
                    aria-valuenow={3000000000}
                    className="usage-progress-bar-fill"
                    role="progressbar"
                    style={
                      {
                        "backgroundColor": "#DB3B21",
                        "width": "100%",
                      }
                    }
                  />
                </div>
                <div
                  className="usage-progress-text-bottom"
                >
                  <div
                    className="usage-progress-summary-used"
                  >
                    USAGE_USED_OF3 GB3 GB
                  </div>
                  <div
                    className="usage-progress-summary-remaining"
                  >
                    USAGE_REMAINING0
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="usage-box-inner-small"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <span
                  aria-hidden="true"
                  className="usage-check-icon data-icon"
                  style={
                    {
                      "--usage-color": "#DB3B21",
                    }
                  }
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-details"
              >
                <div
                  className="usage-progress-wrapper"
                >
                  <CircularProgressbarWithChildren
                    aria-label="USAGE_DATA"
                    id="Max-Daily-Session-Traffic"
                    maxValue={3000000000}
                    strokeWidth={12}
                    styles={
                      {
                        "background": {},
                        "path": {
                          "stroke": "#DB3B21",
                          "strokeLinecap": "butt",
                          "transitionDuration": "0.5s",
                        },
                        "root": {},
                        "text": {},
                        "trail": {
                          "stroke": "#EAECF0",
                          "strokeLinecap": "butt",
                        },
                      }
                    }
                    value={3000000000}
                  >
                    <div
                      className="usage-progress-text"
                    >
                      <strong>
                        0
                      </strong>
                      <div
                        className="usage-progress-remaining"
                      >
                        Remaining
                      </div>
                    </div>
                  </CircularProgressbarWithChildren>
                </div>
                <div
                  className="usage-check-used usage-check-used-bytes"
                >
                  USAGE_USED_OF3 GB3 GB
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p
        className="usage-upgrade"
      >
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> rendering should render correctly 1`] = `
<React.Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <loader
        full={false}
        small={true}
      />
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        />
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
          >
            WiFi Login Successful!
          </p>
          <p
            className="status-content"
          >
                    You can now use the internet.
          </p>
          <p
            className="status-content"
          >
                    You may leave this page open in case you want to log out.
          </p>
          <p
            className="status-content"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <React.Fragment>
    <form
      action="http://localhost/"
      className="hidden"
      id="cp-login-form"
      method="post"
      target="owisp-auth-iframe"
    >
      <input
        name="auth_user"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="auth_pass"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="zone"
        readOnly={true}
        type="text"
        value="zone_name"
      />
      <input
        name="redirurl"
        readOnly={true}
        type="text"
        value="http://localhost:8080/default/status"
      />
      <input
        name="accept"
        readOnly={true}
        type="text"
        value="accept"
      />
    </form>
  </React.Fragment>
  <React.Fragment>
    <form
      action="http://localhost:8081"
      className="hidden"
      id="cp-logout-form"
      method="post"
      target="owisp-auth-logout-iframe"
    >
      <input
        name="logout_id"
        readOnly={true}
        type="hidden"
        value=""
      />
    </form>
    <iframe
      className="hidden"
      name="owisp-auth-logout-iframe"
      onLoad={[Function]}
      title="owisp-auth-iframe"
    />
  </React.Fragment>
</React.Fragment>
`;

exports[`<Status /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<React.Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row limit-info"
    >
      <div
        className="usage-overview-title"
      >
        USAGE_OVERVIEW
      </div>
      <p>
        USAGE_OVERVIEW_DESCRIPTION
      </p>
      <loader
        full={false}
        small={true}
      />
      <div
        className="usage-details"
      >
        <div
          className="usage-checks-container"
        />
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
          >
            STATUS_CONTENT
          </p>
          <p
            className="status-content"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              LOGGED_IN
            </span>
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <React.Fragment>
    <form
      action="http://localhost/"
      className="hidden"
      id="cp-login-form"
      method="post"
      target="owisp-auth-iframe"
    >
      <input
        name="auth_user"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="auth_pass"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="zone"
        readOnly={true}
        type="text"
        value="zone_name"
      />
      <input
        name="redirurl"
        readOnly={true}
        type="text"
        value="http://localhost:8080/default/status"
      />
      <input
        name="accept"
        readOnly={true}
        type="text"
        value="accept"
      />
    </form>
  </React.Fragment>
  <React.Fragment>
    <form
      action="http://localhost:8081"
      className="hidden"
      id="cp-logout-form"
      method="post"
      target="owisp-auth-logout-iframe"
    >
      <input
        name="logout_id"
        readOnly={true}
        type="hidden"
        value=""
      />
    </form>
    <iframe
      className="hidden"
      name="owisp-auth-logout-iframe"
      onLoad={[Function]}
      title="owisp-auth-iframe"
    />
  </React.Fragment>
</React.Fragment>
`;
